--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 </head>
-<body class="inicio">
+<body class="inicio-exemplo">
     <header>
         <img src="./images/logo.png" alt="Missão Ambiental">
         <div class="cabecalho">
