--- a/contatos.html
+++ b/contatos.html
@@ -9,6 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <!-- <style> -->
+        /* html {
+    height: 100%;
+    } */
+    /* body {
+        height: 100%;
+        margin: 0;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    } */
+    <!-- </style> -->
 </head>
 <body class="contatos">
     <a href="index.html" class="volta">Voltar</a>
