fix visitas.html layout

--- a/visitas.html
+++ b/visitas.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <style>
+        html{
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body class="cima">
     <a href="index.html" class="volta">Voltar</a>
