--- a/espaco.html
+++ b/espaco.html
@@ -16,9 +16,9 @@
     <img src="./images/tree.png" alt="arvore" class="arvore">
     <p class="sub">Nossas Espécies</p>
     <p class="sub-esp">Um lugar diversificado.<br>Plantas e Abelhas</p>
-    <p class="cont-esp">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-        Numquam adipisci fuga aliquam magnam atque, accusantium <br>
-        quo sapiente laborum, odit repudiandae neque facere veritatis <br>
+    <p class="cont-esp">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Numquam adipisci fuga aliquam magnam atque, accusantium
+        quo sapiente laborum, odit repudiandae neque facere veritatis 
         nobis doloribus at modi quos nemo qui.</p>
     <img src="./images/amora e alface.PNG" alt="amora e alface" class="amoralface">
     
