more content in visitas

--- a/visitas.html
+++ b/visitas.html
@@ -38,6 +38,13 @@
         <a href="projetos.html" class="link">Projetos</a><br> 
         <br> 
         <a href="contatos.html" class="link">Contatos</a></p>
+    </div>
+    <div class="termos">
+        <p class="uso">Termos de Uso</p>
+    </div>
+    <div class="creditos">
+        <p class="termos">Créditos</p>
+        <p class="freepick">- <a href=""https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
     </div> 
 </body> 
 </html> 
