major changes to projetos

--- a/Projetos/abelhas.html
+++ b/Projetos/abelhas.html
@@ -14,6 +14,6 @@
     <a href="../projetos.html" class="volta">Voltar</a>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Abelhas Nativas sem Ferrão</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <p class="conteudo">A Missão Ambiental em parceria com o SOS Abelhas Sem Ferrão ajuda a preservar e conscientizar sobre as abelhas nativas. O espaço conta com diversas espécies de abelhas sem ferrão como mirim droryana (Plebeia droryana), jataí (Tetragonisca angustula), arapuá (Trigona spinipes), boca-de-sapo (Partamona helleri), mandaguari (Scaptotrigona Xanthotrich) e marmelada amarela (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como abelha euglossa (Euglossa bazinga) e as mamangavas (Bombus terrestris).</p>
 </body>
 </html>
