--- a/Projetos/oficinas.html
+++ b/Projetos/oficinas.html
@@ -12,8 +12,8 @@
 </head>
 <body class="ofic">
     <a href="../projetos.html" class="volta">Voltar</a>
-    <br> <br> <br> <br> <br> <br>
-    <p class="titulo">Oficinas</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <br> <br> <br> <br> <br> <br> <br> <br>
+    <p class="titulo">Oficinas de Educação Ambiental</p>
+    <p class="conteudo">As oficinas de educação ambiental são momentos organizados para expor, discutir e sensibilizar as pessoas sobre as temáticas relacionadas ao meio ambiente. Entre as oficinas foram realizadas sobre PANCs – Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas.</p>
 </body>
 </html>
