--- a/Projetos/orquidario.html
+++ b/Projetos/orquidario.html
@@ -13,7 +13,7 @@
 <body class="inte">
     <a href="../projetos.html" class="volta">Voltar</a>
     <br> <br> <br> <br> <br> <br> <br> <br>
-    <p class="titulo">Projeto Interbairros</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <p class="titulo">Orquidário</p>
+    <p class="conteudo">O orquidário é um projeto desenvolvido em parceria com o Ohquidea que busca resgatar orquídeas e replantá-las em outros espaços. Dessa maneira, o orquidário da Missão Ambiental foi estruturado para receber as orquídeas descartadas. Entre as espécies destacam a Wanda, Cymbidium, Cattleya e Phalaenopsis.</p>
 </body>
 </html>
