--- a/projetos.html
+++ b/projetos.html
@@ -16,22 +16,22 @@
     <p>Aqui na fundação, disponibilizamos vários projetos, procure por um que você ache interessante...</p>
     <div class="projetos">
         <div class="product-image" id="img-1"></div>
-          <h3>Agroecologia</h3>
-          <p>Começo de tudo</p>
-          <a href="./Projetos/agroecologia.html" class="gradient-button projbtn">Saiba mais</a>
+          <h3>Horta Comunitária</h3>
+          <p>Horta Educativa</p>
+          <a href="./Projetos/horta.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
     <div class="projetos">
         <div class="product-image" id="img-2"></div>
           <h3>Compostagem</h3>
-          <p>De lixo orgânico para adubo</p>
+          <p>Apresentação dos tipos de compostagem</p>
           <a href="./Projetos/compostagem.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
     <div class="projetos">
         <div class="product-image" id="img-3"></div>
           <h3>Abelhas Nativas sem Ferrão</h3>
-          <p>O nome da espécie é Jaracatiá</p>
+          <p>Conscientização sobre as abelhas</p>
           <a href="./Projetos/abelhas.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
@@ -42,39 +42,39 @@
           <a href="./Projetos/captacao.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
-    <div class="projetos">
+    <!-- <div class="projetos">
         <div class="product-image" id="img-5"></div>
           <h3>Materiais Recicláveis</h3>
           <p>Coleta de recicláveis</p>
           <a href="./Projetos/reciclaveis.html" class="gradient-button projbtn">Saiba mais</a>
-    </div>
+    </div> -->
 
     <div class="projetos">
         <div class="product-image" id="img-6"></div>
-          <h3>Espécies Nativas</h3>
-          <p>Plantio de espécies nativas</p>
+          <h3>Árvores Nativas</h3>
+          <p>Plantio de árvores nativas</p>
           <a href="./Projetos/especies.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
     <div class="projetos">
         <div class="product-image" id="img-7"></div>
-          <h3>Oficinas</h3>
+          <h3>Oficinas de Educação</h3>
           <p>Oficinas para o público</p>
           <a href="./Projetos/oficinas.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 
-    <div class="projetos">
+    <!-- <div class="projetos">
         <div class="product-image" id="img-8"></div>
           <h3>Voluntário</h3>
           <p>Deseja ser voluntário?</p>
           <a href="./Projetos/voluntario.html" class="gradient-button projbtn">Saiba mais</a>
-    </div>
+    </div> -->
 
     <div class="projetos">
         <div class="product-image" id="img-9"></div>
-          <h3>Projeto Interbairros</h3>
-          <p>Iniciativa em conjunto com a Escola Comunitária</p>
-          <a href="./Projetos/interbairros.html" class="gradient-button projbtn">Saiba mais</a>
+          <h3>Orquidário</h3>
+          <p>Resgate e replantio de orquídeas</p>
+          <a href="./Projetos/orquidario.html" class="gradient-button projbtn">Saiba mais</a>
     </div>
 </body>
 </html>
