--- a/Projetos/captacao.html
+++ b/Projetos/captacao.html
@@ -14,6 +14,6 @@
     <a href="../projetos.html" class="volta">Voltar</a>
     <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Captação de Água da Chuva</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <p class="conteudo">O sistema de captação de água pluvial foi implantado pelo parceiro Edison Urbano da Sempre Sustentável com viés de reaproveitar a água de chuva coletada pelo beiral do vizinho. A água fica armazenada na bombona de 200 L e o excesso é direcionado para os canteiros de hortaliças. Além disso, é utilizado para lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos.</p>
 </body>
 </html>
