--- a/Projetos/compostagem.html
+++ b/Projetos/compostagem.html
@@ -14,6 +14,9 @@
     <a href="../projetos.html" class="volta">Voltar</a>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Compostagem</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <p class="conteudo">  A Missão Ambiental destina seus resíduos orgânicos para a compostagem. No espaço emprega-se diferentes formas de compostagem, sendo utlizadas a vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra.
+        A compostagem termofílica é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
+        A compostagem em valetas é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
+        A vermicompostagem é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
 </body>
 </html>
