--- a/Projetos/especies.html
+++ b/Projetos/especies.html
@@ -13,7 +13,7 @@
 <body class="nati">
     <a href="../projetos.html" class="volta">Voltar</a>
     <br> <br> <br> <br> <br> <br> <br> <br>
-    <p class="titulo">Espécies Nativas</p>
-    <p class="conteudo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias temporibus sed vel, exercitationem dolores autem itaque eveniet architecto tempora blanditiis tempore! Unde saepe voluptate mollitia impedit et. Architecto, fugit repellat.</p>
+    <p class="titulo">Árvores Nativas</p>
+    <p class="conteudo">Ao longo do período de 5 anos foram plantadas algumas espécies nativas de Mata Atlântica e Cerrado Paulista para reflorestamento da área degradada. Entre elas estão espécies como Jaracatiá (Jacaratia spinosa), Cambuci (Campomanesia phaea), Lobeira (Solanum lycocarpum), Araucária (Araucaria angustifolia), Pau Jacaré (Piptadenia gonoacantha), Bacupari (Garcinia gardneriana), Juçara (Euterpe edulis), Embaúba Prateada (Cecropia hololeuca), Cereja-do-Rio-Grande (Eugenia involucrata), Pitanga Preta (Eugenia uniflora), Cambucá (Plinia edulis), Embira-de-Sapo (Lonchocarpus muehlbergianus), Uvaia (Eugenia pyriformis), Jequitibá Branco (Cariniana estrellensis), Angico Vermelho (Anadenanthera macrocarpa) Ingá-do-Brejo (Inga uruguensis), Cabeludinha (Myrciaria glazioviana), entre outras.</p>
 </body>
 </html>
