--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <style>
+        /* Teste para HTML da imagem cobrir a página toda, sucetivel a remoção durante criação da OnePage
+        (Trial for html to cover entire page, suceptible to modifications after altering to "One-Page" model) */
+        html{
+            height: 100%;
+            overflow-y: hidden;
+        }
+    </style>
 </head>
 <body class="inicio">
     <header>
@@ -17,14 +25,14 @@
             <a href="espaco.html" class="links">Nosso Espaço</a>
             <a href="projetos.html" class="links">Projetos</a>
             <a href="visitas.html" class="links">Visitas</a>
-            <a href="./contatos.html" class="links ultimo">Contatos <img src="./images/contatos 1.png" alt=""></a> <br> <br>
+            <a href="./contatos.html" class="links ultimo">Contatos <img src="./images/contatos 1.png" alt=""></a>
         </div>
     </header>
     <div class="parte-esq">
         <p class="essa texto-inicial">Essa é a Missão Ambiental</p>
         <p class="missao texto-inicial">Reutilização.<br>Uma comunidade forte.</p>
         <p class="cont-index">A Missão Ambiental é uma associação civil sem fins lucrativos que cria espaços de preservação e convivência para a comunidade de vida na Terra buscando garantir a otimização dos recursos ambientais com produção de alimentos e regeneração do solo, incentiva a participação dos moradores do entorno e busca parceiros locais para realizar suas atividades . Além disso, conta com um amplo espaço cedido pela iniciativa privada onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia, viveiro de mudas nativas para as ações de plantios, mutirões (sempre agendados e divulgados nas redes sociais), cursos e oficinas. Tem um quadro de voluntários e parceiros como: SOS Abelhas sem Ferrão, Sempre Sustentável, Escola Comunitária, OHquidea, Aquário de São Paulo, ICC (Instituto Cristovão Colombo), FUNSAI (Fundação Nossa Senhora Auxiliadora do Ipiranga), CADES Ipiranga (Conselho Regional do Meio Ambiente, Desenvolvimento Sustentável e Cultura de Paz da Subprefeitura Ipiranga), Muda Ipiranga, entre outros.</p>
-    </div> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+    </div> 
     <footer>
         <a href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.png" alt="Instagram"></a>
         <a href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.png" alt="Facebook"></a>
