--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         }
         header{
             padding-left: 10px;
+            margin-right: 10%;
         }
     </style>
 </head>
@@ -28,7 +29,10 @@
             <a href="espaco.html" class="links">Nosso Espaço</a>
             <a href="projetos.html" class="links">Projetos</a>
             <a href="visitas.html" class="links">Visitas</a>
-            <a href="./contatos.html" class="links ultimo">Contatos <img src="./images/contatos 1.png" alt=""></a>
+            <span class="cabecalho-contato">
+                 <a href="./contatos.html" class="links ultimo">Contatos
+                 <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
+            </span>
         </div>
     </header>
     <div class="parte-esq">
