--- a/projetos.html
+++ b/projetos.html
@@ -13,7 +13,7 @@
 <body class="projeto">
     <a href="index.html" class="volta">Voltar</a>
     <p class="texto1">Nossos Projetos</p>
-    <p>Aqui na fundação, disponibilizamos vários projetos, procure por um que você ache interessante...</p>
+    <p>Aqui na fundação, disponibilizamos vários projetos diversos, procure por um que você ache interessante:</p>
     <div class="projetos">
         <div class="product-image" id="img-1"></div>
           <h3>Horta Comunitária</h3>
