--- a/visitas.html
+++ b/visitas.html
@@ -19,7 +19,7 @@
     <a href="index.html" class="volta">Voltar</a> 
     <p class="titulo">Agende uma Visita</p> 
     <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
-    <a href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a><br><br> 
+    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a><br><br> 
     <div class="vis-cont1"> 
         <img src="./images/logo.png" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
