last and next bar for projetos

--- a/Projetos/abelhas.html
+++ b/Projetos/abelhas.html
@@ -15,5 +15,9 @@
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Abelhas Nativas sem Ferrão</p>
     <p class="conteudo">A Missão Ambiental em parceria com o SOS Abelhas Sem Ferrão ajuda a preservar e conscientizar sobre as abelhas nativas. O espaço conta com diversas espécies de abelhas sem ferrão como mirim droryana (Plebeia droryana), jataí (Tetragonisca angustula), arapuá (Trigona spinipes), boca-de-sapo (Partamona helleri), mandaguari (Scaptotrigona Xanthotrich) e marmelada amarela (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como abelha euglossa (Euglossa bazinga) e as mamangavas (Bombus terrestris).</p>
+    <footer class="rodape-principal">
+        <a href="./compostagem.html" class="instagram"><- Ir para a Compostagem</a>
+        <a href="./captacao.html" class="facebook">Ir para a Captação de água da chuva -></a>
+    </footer>
 </body>
 </html>
