--- a/Projetos/captacao.html
+++ b/Projetos/captacao.html
@@ -15,5 +15,9 @@
     <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Captação de Água da Chuva</p>
     <p class="conteudo">O sistema de captação de água pluvial foi implantado pelo parceiro Edison Urbano da Sempre Sustentável com viés de reaproveitar a água de chuva coletada pelo beiral do vizinho. A água fica armazenada na bombona de 200 L e o excesso é direcionado para os canteiros de hortaliças. Além disso, é utilizado para lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos.</p>
+    <footer class="rodape-principal">
+        <a href="./abelhas.html" class="instagram"><- Ir para as Abelhas Nativas sem Ferrão</a>
+        <a href="./especies.html" class="facebook">Ir para as Árvores Nativas -></a>
+    </footer>
 </body>
 </html>
