--- a/Projetos/compostagem.html
+++ b/Projetos/compostagem.html
@@ -18,5 +18,9 @@
         A compostagem termofílica é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
         A compostagem em valetas é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
         A vermicompostagem é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
+    <footer class="rodape-principal">   
+        <a href="./horta.html" class="instagram"><- Ir para a Horta Comunitária</a>
+        <a href="./abelhas.html" class="facebook">Ir para as Abelhas Nativas sem Ferrão -></a>
+    </footer>
 </body>
 </html>
