--- a/Projetos/especies.html
+++ b/Projetos/especies.html
@@ -15,5 +15,9 @@
     <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Árvores Nativas</p>
     <p class="conteudo">Ao longo do período de 5 anos foram plantadas algumas espécies nativas de Mata Atlântica e Cerrado Paulista para reflorestamento da área degradada. Entre elas estão espécies como Jaracatiá (Jacaratia spinosa), Cambuci (Campomanesia phaea), Lobeira (Solanum lycocarpum), Araucária (Araucaria angustifolia), Pau Jacaré (Piptadenia gonoacantha), Bacupari (Garcinia gardneriana), Juçara (Euterpe edulis), Embaúba Prateada (Cecropia hololeuca), Cereja-do-Rio-Grande (Eugenia involucrata), Pitanga Preta (Eugenia uniflora), Cambucá (Plinia edulis), Embira-de-Sapo (Lonchocarpus muehlbergianus), Uvaia (Eugenia pyriformis), Jequitibá Branco (Cariniana estrellensis), Angico Vermelho (Anadenanthera macrocarpa) Ingá-do-Brejo (Inga uruguensis), Cabeludinha (Myrciaria glazioviana), entre outras.</p>
+    <footer class="rodape-principal">    
+        <a href="./captacao.html" class="instagram"><- Ir para a Captação de Água da Chuva</a>
+        <a href="./oficinas.html" class="facebook">Ir para as Oficinas de Educação -></a>
+    </footer>
 </body>
 </html>
