--- a/Projetos/horta.html
+++ b/Projetos/horta.html
@@ -17,5 +17,9 @@
     <p class="conteudo">  A horta educativa comunitária foi idealizada para proporcionar experiências sensoriais, alimentação orgânica e dinamismo. É uma horta suspensa confeccionada com caixas de isopor e mesas de madeiras remontadas de paletes.
         A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.
         Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló. feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros. </p>
+    <footer class="rodape-principal">
+        <a href="./orquidario.html" class="instagram"><- Ir para o Orquidário</a>
+        <a href="./compostagem.html" class="facebook">Ir para a Compostagem -></a>
+    </footer>
 </body>
 </html>
