--- a/Projetos/oficinas.html
+++ b/Projetos/oficinas.html
@@ -15,5 +15,9 @@
     <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Oficinas de Educação Ambiental</p>
     <p class="conteudo">As oficinas de educação ambiental são momentos organizados para expor, discutir e sensibilizar as pessoas sobre as temáticas relacionadas ao meio ambiente. Entre as oficinas foram realizadas sobre PANCs – Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas.</p>
+    <footer class="rodape-principal">   
+        <a href="./especies.html" class="instagram"><- Ir para as Árvores Nativas</a>
+        <a href="./orquidario.html" class="facebook">Ir para o Orquidário -></a>
+    </footer>
 </body>
 </html>
