--- a/Projetos/orquidario.html
+++ b/Projetos/orquidario.html
@@ -15,5 +15,9 @@
     <br> <br> <br> <br> <br> <br> <br> <br>
     <p class="titulo">Orquidário</p>
     <p class="conteudo">O orquidário é um projeto desenvolvido em parceria com o Ohquidea que busca resgatar orquídeas e replantá-las em outros espaços. Dessa maneira, o orquidário da Missão Ambiental foi estruturado para receber as orquídeas descartadas. Entre as espécies destacam a Wanda, Cymbidium, Cattleya e Phalaenopsis.</p>
+    <footer class="rodape-principal">    
+        <a href="./oficinas.html" class="instagram"><- Ir para as Oficinas de Educação</a>
+        <a href="./horta.html" class="facebook">Ir para a Horta Comunitária -></a>
+    </footer>
 </body>
 </html>
