--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <header>
         <img src="./images/logo.png" alt="Missão Ambiental">
         <div class="cabecalho">
+            <a href="voluntario.html" class="links">Voluntário</a>
             <a href="espaco.html" class="links">Nosso Espaço</a>
             <a href="projetos.html" class="links">Projetos</a>
-            <a href="visitas.html" class="links">Visitas</a>
+            <a href="equipe.html" class="links">Equipe</a>
+            <a href="visitas.html" class="links">Agendar</a>
             <span class="cabecalho-contato">
                  <a href="./contatos.html" class="links ultimo">Contatos
                  <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
