added voluntario to index

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         </div>
     </footer>
     </main>
+    <div class="voluntario">
+        <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
+        <a target="_blank" href="#"><img class="voluntario-btn" src="../images/voluntariado.png" alt="Voluntário"></a>
+        <a href="index.html" class="volta">Voltar</a>
+    </div>
     <div class="espaco">
         <p class="titulo">Nosso Espaço</p>
     <p class="cont-espaco">Descrição do conteúdo</p>
