change class espaco to id

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="./images/logo.png" alt="Missão Ambiental">
         <nav class="cabecalho">
             <a href="voluntario.html" class="links">Voluntário</a>
-            <a href="espaco.html" class="links">Nosso Espaço</a>
+            <a href="#espaco" class="links">Nosso Espaço</a>
             <a href="projetos.html" class="links">Projetos</a>
             <a href="equipe.html" class="links">Equipe</a>
             <a href="visitas.html" class="links">Agendar</a>
@@ -51,7 +51,7 @@
         </div>
     </footer>
     </main>
-    <div class="espaco">
+    <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
     <p class="cont-espaco">Descrição do conteúdo</p>
     <img src="./images/tree.png" alt="arvore" class="arvore">
