some general changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     <div class="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
         <a target="_blank" href="#"><img class="voluntario-btn" src="../images/voluntariado.png" alt="Voluntário"></a>
-        <a href="index.html" class="volta">Voltar</a>
     </div>
     <div class="espaco">
         <p class="titulo">Nosso Espaço</p>
@@ -89,6 +88,75 @@
     <p class="titulo">Conheça nosso incrível espaço</p>
     <img src="./images/blueberry2.png" alt="amora2" class="arvore">
     <a href="index.html" class="volta">Voltar</a>
+    </div>
+    </div>
+    <div class="equipe">
+        <p class="sub">Nossa Equipe</p>
+    <div class="membro pos1">
+        <img src="./images/perfil 1.png" alt="Foto1">
+        <p class="nome">Nome</p>
+        <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
+    </div>
+    <div class="membro pos2">
+        <img src="./images/perfil 1.png" alt="Foto2">
+        <p class="nome">Nome</p>
+        <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
+    </div>
+    <div class="membro pos3">
+        <img src="./images/perfil 1.png" alt="Foto3">
+        <p class="nome">Nome</p>
+        <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
+    </div>
+    <div class="agendar">
+        <p class="titulo">Agende uma Visita</p> 
+    <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
+    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a><br><br> 
+    <div class="vis-cont1"> 
+        <img src="./images/logo.png" alt="Missão Ambiental" class="logo"> 
+        <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
+        Vila São José - <u>São</u> Paulo, SP<br> 
+        <br> 
+        missaoambiental.org@gmail.com<br> 
+        <br> 
+        |(11) 96677-6565</p> 
+    </div>   
+    <div class="vis-cont2"> 
+        <p class="link-tit">Quick Links</p> 
+        <p class="link"><a href="index.html" class="link">Home</a><br> 
+        <br> 
+        <a href="espaco.html" class="link">Our Space</a><br> 
+        <br> 
+        <a href="projetos.html" class="link">Projetos</a><br> 
+        <br> 
+        <a href="contatos.html" class="link">Contatos</a></p>
+    </div>
+    <div class="termos">
+        <p class="uso">Termos de Uso</p>
+    </div>
+    <div class="creditos">
+        <p class="termos">Créditos</p>
+        <p class="freepick">- <a href=""https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
+    </div>
+    </div>
+    <div class="contatos">
+        <img src="./images/logo2.png" alt="Missão Ambiental" class="logo">
+    <p class="cont">|Rua Moreira de Godói, 01 - <br>
+    Vila São José - <u>São</u> Paulo, SP<br>
+    <br>
+    missaoambiental.org@gmail.com<br>
+    <br>
+    |(11) 96677-6565 <br><br>
+    <span class="cont-gmail"><img src="./images/gmail.png" alt="Gmail">missaoambiental.org@gmail.com</span><br><br>
+    <a href="https://www.instagram.com/missao.ambiental/" class="cont-inst rede-cont"><img src="./images/instagram 1.png" alt="Instagram">Nosso Instagram</a><br><br>
+    <a href="https://www.facebook.com/missaoambiental.org/" class="cont-face rede-cont"><img src="./images/facebook 1.png" alt="Facebook">Nosso Facebook</a><br><br>
+    <span class="link-tit-cont">Quick Links</span><br><br>
+    <a href="index.html" class="link-cont">Home</a><br>
+    <br>
+    <a href="espaco.html" class="link-cont">Our Space</a><br>
+    <br>
+    <a href="projetos.html" class="link-cont">Projetos</a><br>
+    <br>
+    <a href="./visitas.html" class="link-cont">Visitas</a></p>
     </div>
 </body>
 </html>
