more changes about visitas in index

--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
     <div class="agendar">
         <p class="titulo">Agende uma Visita</p> 
     <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
-    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a><br><br> 
+    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a>
+    </div> 
+    <div class="agendar2">
+        <br><br> 
     <div class="vis-cont1"> 
         <img src="./images/logo.png" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
@@ -136,6 +139,7 @@
     <div class="creditos">
         <p class="termos">Créditos</p>
         <p class="freepick">- <a href=""https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
+    </div>
     </div>
     </div>
     <div class="contatos">
