Less redundant informations in contatos

--- a/index.html
+++ b/index.html
@@ -142,13 +142,7 @@
     </div>
     </div>
     <div class="contatos">
-        <img src="./images/logo2.png" alt="Missão Ambiental" class="logo">
-    <p class="cont">|Rua Moreira de Godói, 01 - <br>
-    Vila São José - <u>São</u> Paulo, SP<br>
-    <br>
-    missaoambiental.org@gmail.com<br>
-    <br>
-    |(11) 96677-6565 <br><br>
+    <p class="cont"> <br><br>
     <span class="cont-gmail"><img src="./images/gmail.png" alt="Gmail">missaoambiental.org@gmail.com</span><br><br>
     <a href="https://www.instagram.com/missao.ambiental/" class="cont-inst rede-cont"><img src="./images/instagram 1.png" alt="Instagram">Nosso Instagram</a><br><br>
     <a href="https://www.facebook.com/missaoambiental.org/" class="cont-face rede-cont"><img src="./images/facebook 1.png" alt="Facebook">Nosso Facebook</a><br><br>
