quick link to contatos

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <a href="#espaco" class="links">Nosso Espaço</a>
             <a href="projetos.html" class="links">Projetos</a>
             <a href="equipe.html" class="links">Equipe</a>
-            <a href="visitas.html" class="links">Agendar</a>
+            <a href="#visitas.html" class="links">Agendar</a>
             <span class="cabecalho-contato">
-                 <a href="./contatos.html" class="links ultimo">Contatos
+                 <a href="#contatos" class="links ultimo">Contatos
                  <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
             </span>
         </div>
@@ -141,7 +141,7 @@
     </div>
     </div>
     </div>
-    <div class="contatos">
+    <div id="contatos">
     <p class="cont"> <br><br>
     <span class="cont-gmail"><img src="./images/gmail.png" alt="Gmail">missaoambiental.org@gmail.com</span><br><br>
     <a href="https://www.instagram.com/missao.ambiental/" class="cont-inst rede-cont"><img src="./images/instagram 1.png" alt="Instagram">Nosso Instagram</a><br><br>
