--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
     <img src="./images/blueberry2.png" alt="amora2" class="arvore">
     </div>
     </div>
+    <br>
+    <div class="agro">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Horta Educativa Comunitária:</p>
+        <p class="conteudo">  A horta educativa comunitária foi idealizada para proporcionar experiências sensoriais, alimentação orgânica e dinamismo. É uma horta suspensa confeccionada com caixas de isopor e mesas de madeiras remontadas de paletes.
+            A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.
+            Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló. feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros. </p>
+        <!-- <footer class="rodape-principal">
+            <a href="./orquidario.html" class="instagram"><- Ir para o Orquidário</a>
+            <a href="./compostagem.html" class="facebook">Ir para a Compostagem -></a>
+        </footer> -->
+    </div>
     <div class="equipe">
         <p class="sub">Nossa Equipe</p>
     <div class="membro pos1">
