--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
     <header class="topo">
         <img src="./images/logo.png" alt="Missão Ambiental">
         <nav class="cabecalho">
-            <a href="voluntario.html" class="links">Voluntário</a>
-            <a href="#espaco" class="links">Nosso Espaço</a>
-            <a href="projetos.html" class="links">Projetos</a>
-            <a href="equipe.html" class="links">Equipe</a>
-            <a href="#visitas.html" class="links">Agendar</a>
-            <span class="cabecalho-contato">
-                 <a href="#contatos" class="links ultimo">Contatos
-                 <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
-            </span>
+            <ul>
+                <li><a href="voluntario.html" class="links">Voluntário</a></li>
+                <li><a href="#espaco" class="links">Nosso Espaço</a></li>
+                <li><a href="projetos.html" class="links">Projetos</a></li>
+                <li><a href="equipe.html" class="links">Equipe</a></li>
+                <li><a href="#visitas.html" class="links">Agendar</a></li>
+                <li><span class="cabecalho-contato">
+                     <a href="#contatos" class="links ultimo">Contatos
+                  <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
+                </span>
+                </li>
+            </ul>
         </div>
     </header>
     <div class="parte-esq">
