--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#visitas.html" class="links">Agendar</a></li>
                 <li><span class="cabecalho-contato">
                      <a href="#contatos" class="links ultimo">Contatos
-                  <img class="imagem-teste" src="./images/contatos 1.png" alt=""" class="imagem-contato"></a>
+                  <img class="imagem-teste" src="./images/contatos 1.png" alt="" class="imagem-contato"></a>
                 </span>
                 </li>
             </ul>
@@ -49,7 +49,7 @@
                 <img src="./images/mapa 1.png" alt="Mapa">
                 </a>
              </div>
-            <p>missaoambiental.org@gmail.com | Rua Moreira de Godói, o1 - Vila São José - São Paulo, SP | (11) 96677-6565
+            <p>missaoambiental.org@gmail.com | Rua Moreira de Godói, 01 - Vila São José - São Paulo, SP | (11) 96677-6565
             </p>
         </div>
     </footer>
