--- a/index.html
+++ b/index.html
@@ -105,6 +105,76 @@
             <a href="./compostagem.html" class="facebook">Ir para a Compostagem -></a>
         </footer> -->
     </div>
+    <br>
+    <div class="comp">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Compostagem</p>
+        <p class="conteudo">  A Missão Ambiental destina seus resíduos orgânicos para a compostagem. No espaço emprega-se diferentes formas de compostagem, sendo utlizadas a vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra.
+            A compostagem termofílica é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
+            A compostagem em valetas é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
+            A vermicompostagem é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
+        <!-- <footer class="rodape-principal">   
+            <a href="./horta.html" class="instagram"><- Ir para a Horta Comunitária</a>
+            <a href="./abelhas.html" class="facebook">Ir para as Abelhas Nativas sem Ferrão -></a>
+        </footer> -->
+    </div>
+    <br>
+    <div class="abel">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Abelhas Nativas sem Ferrão</p>
+        <p class="conteudo">A Missão Ambiental em parceria com o SOS Abelhas Sem Ferrão ajuda a preservar e conscientizar sobre as abelhas nativas. O espaço conta com diversas espécies de abelhas sem ferrão como mirim droryana (Plebeia droryana), jataí (Tetragonisca angustula), arapuá (Trigona spinipes), boca-de-sapo (Partamona helleri), mandaguari (Scaptotrigona Xanthotrich) e marmelada amarela (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como abelha euglossa (Euglossa bazinga) e as mamangavas (Bombus terrestris).</p>
+        <!-- <footer class="rodape-principal">
+            <a href="./compostagem.html" class="instagram"><- Ir para a Compostagem</a>
+            <a href="./captacao.html" class="facebook">Ir para a Captação de água da chuva -></a>
+        </footer> -->
+    </div>
+    <br>
+    <div class="capt">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Captação de Água da Chuva</p>
+        <p class="conteudo">O sistema de captação de água pluvial foi implantado pelo parceiro Edison Urbano da Sempre Sustentável com viés de reaproveitar a água de chuva coletada pelo beiral do vizinho. A água fica armazenada na bombona de 200 L e o excesso é direcionado para os canteiros de hortaliças. Além disso, é utilizado para lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos.</p>
+        <!-- <footer class="rodape-principal">
+            <a href="./abelhas.html" class="instagram"><- Ir para as Abelhas Nativas sem Ferrão</a>
+            <a href="./especies.html" class="facebook">Ir para as Árvores Nativas -></a>
+        </footer> -->
+    </div>
+    <br>
+    <div class="nati">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Árvores Nativas</p>
+        <p class="conteudo">Ao longo do período de 5 anos foram plantadas algumas espécies nativas de Mata Atlântica e Cerrado Paulista para reflorestamento da área degradada. Entre elas estão espécies como Jaracatiá (Jacaratia spinosa), Cambuci (Campomanesia phaea), Lobeira (Solanum lycocarpum), Araucária (Araucaria angustifolia), Pau Jacaré (Piptadenia gonoacantha), Bacupari (Garcinia gardneriana), Juçara (Euterpe edulis), Embaúba Prateada (Cecropia hololeuca), Cereja-do-Rio-Grande (Eugenia involucrata), Pitanga Preta (Eugenia uniflora), Cambucá (Plinia edulis), Embira-de-Sapo (Lonchocarpus muehlbergianus), Uvaia (Eugenia pyriformis), Jequitibá Branco (Cariniana estrellensis), Angico Vermelho (Anadenanthera macrocarpa) Ingá-do-Brejo (Inga uruguensis), Cabeludinha (Myrciaria glazioviana), entre outras.</p>
+        <!-- <footer class="rodape-principal">    
+            <a href="./captacao.html" class="instagram"><- Ir para a Captação de Água da Chuva</a>
+            <a href="./oficinas.html" class="facebook">Ir para as Oficinas de Educação -></a>
+        </footer> -->
+    </div>
+    <br>
+    <div class="ofic">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Oficinas de Educação Ambiental</p>
+        <p class="conteudo">As oficinas de educação ambiental são momentos organizados para expor, discutir e sensibilizar as pessoas sobre as temáticas relacionadas ao meio ambiente. Entre as oficinas foram realizadas sobre PANCs – Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas.</p>
+        <!-- <footer class="rodape-principal">   
+            <a href="./especies.html" class="instagram"><- Ir para as Árvores Nativas</a>
+            <a href="./orquidario.html" class="facebook">Ir para o Orquidário -></a>
+        </footer> -->
+    </div>
+    <br>
+    <div class="inte">
+        <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
+        <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="titulo">Orquidário</p>
+        <p class="conteudo">O orquidário é um projeto desenvolvido em parceria com o Ohquidea que busca resgatar orquídeas e replantá-las em outros espaços. Dessa maneira, o orquidário da Missão Ambiental foi estruturado para receber as orquídeas descartadas. Entre as espécies destacam a Wanda, Cymbidium, Cattleya e Phalaenopsis.</p>
+        <!-- <footer class="rodape-principal">    
+            <a href="./oficinas.html" class="instagram"><- Ir para as Oficinas de Educação</a>
+            <a href="./horta.html" class="facebook">Ir para a Horta Comunitária -></a>
+        </footer> -->
+    </div>
+    <br>
     <div class="equipe">
         <p class="sub">Nossa Equipe</p>
     <div class="membro pos1">
