removal of our space content and project links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="voluntario.html" class="links">Voluntário</a></li>
                 <li><a href="#espaco" class="links">Nosso Espaço</a></li>
-                <li><a href="projetos.html" class="links">Projetos</a></li>
+                <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
                 <li><a href="equipe.html" class="links">Equipe</a></li>
                 <li><a href="#visitas.html" class="links">Agendar</a></li>
                 <li><span class="cabecalho-contato">
@@ -60,7 +60,8 @@
     </div>
     <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
-    <p class="cont-espaco">Descrição do conteúdo</p>
+        <p class="conteudo">Dê uma olhada nos projetos disponíveis no nosso espaço:</p>
+    <!-- <p class="cont-espaco">Descrição do conteúdo</p>
     <img src="./images/tree.png" alt="arvore" class="arvore">
     <p class="sub">Nossas Espécies</p>
     <p class="sub-esp">Um lugar diversificado.<br>Plantas e Abelhas</p>
@@ -91,7 +92,7 @@
     <p class="titulo">Conheça nosso incrível espaço</p>
     <img src="./images/blueberry2.png" alt="amora2" class="arvore">
     </div>
-    </div>
+    </div> -->
     <br>
     <div class="agro">
         <!-- <a href="../projetos.html" class="volta">Voltar</a> -->
