Quick links fixed

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <img src="./images/logo.png" alt="Missão Ambiental">
         <nav class="cabecalho">
             <ul>
-                <li><a href="voluntario.html" class="links">Voluntário</a></li>
+                <li><a href="#voluntario" class="links">Voluntário</a></li>
                 <li><a href="#espaco" class="links">Nosso Espaço</a></li>
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
-                <li><a href="equipe.html" class="links">Equipe</a></li>
-                <li><a href="#visitas.html" class="links">Agendar</a></li>
+                <li><a href="#equipe" class="links">Equipe</a></li>
+                <li><a href="#vis-cont1" class="links">Agendar</a></li>
                 <li><span class="cabecalho-contato">
-                     <a href="#contatos" class="links ultimo">Contatos
+                     <a href="#vis-cont2" class="links ultimo">Contatos
                   <img class="imagem-teste" src="./images/contatos 1.png" alt="" class="imagem-contato"></a>
                 </span>
                 </li>
@@ -54,7 +54,7 @@
         </div>
     </footer>
     </main>
-    <div class="voluntario">
+    <div id="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
         <a target="_blank" href="#"><img class="voluntario-btn" src="../images/voluntariado.png" alt="Voluntário"></a>
     </div>
@@ -176,7 +176,7 @@
         </footer> -->
     </div>
     <br>
-    <div class="equipe">
+    <div id="equipe">
         <p class="sub">Nossa Equipe</p>
     <div class="membro pos1">
         <img src="./images/perfil 1.png" alt="Foto1">
@@ -200,7 +200,7 @@
     </div> 
     <div class="agendar2">
         <br><br> 
-    <div class="vis-cont1"> 
+    <div id="vis-cont1"> 
         <img src="./images/logo.png" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
         Vila São José - <u>São</u> Paulo, SP<br> 
@@ -209,7 +209,7 @@
         <br> 
         |(11) 96677-6565</p> 
     </div>   
-    <div class="vis-cont2"> 
+    <div id="vis-cont2"> 
         <p class="link-tit">Quick Links</p> 
         <p class="link"><a href="index.html" class="link">Home</a><br> 
         <br> 
