add button for responsive mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <script src="scripts.js" defer></script>
     <style>
         header{
             padding-left: 10px;
@@ -20,7 +21,9 @@
     <main class="inicio">
     <header class="topo">
         <img src="./images/logo.png" alt="Missão Ambiental">
+        <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
+            <button aria-expanded="false" aria-label="menu" class="icone-menu fechar-menu">×</button>
             <ul>
                 <li><a href="voluntario.html" class="links">Voluntário</a></li>
                 <li><a href="#espaco" class="links">Nosso Espaço</a></li>
