add div to work with js

--- a/index.html
+++ b/index.html
@@ -233,5 +233,6 @@
     <p id="copy">Copyright © 2017 Missão Ambiental, todos os direitos reservados.</p>
     </div>
     </div>
+    <div class="menu-overlay"></div>
 </body>
 </html>
