--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
         <img src="./images/logo.png" alt="Missão Ambiental">
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
-            <button aria-expanded="false" aria-label="menu" class="icone-menu fechar-menu">×</button>
+            <button type="button" class="icone-menu fechar-menu" aria-expanded="false" aria-label="Close">×</button>
             <ul>
                 <li><a href="#voluntario" class="links">Voluntário</a></li>
                 <li><a href="#espaco" class="links">Nosso Espaço</a></li>
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
                 <li><a href="#equipe" class="links">Equipe</a></li>
                 <li><a href="#vis-cont1" class="links">Agendar</a></li>
-                <li><span class="cabecalho-contato">
-                     <a href="#vis-cont2" class="links ultimo">Contatos
-                  <img class="imagem-teste" src="./images/contatos 1.png" alt="" class="imagem-contato"></a>
-                </span>
+                <li>
+                    <a href="#contatos" class="icon-link">Contatos<img src="images/contatos 1.png">
+                    </a>
                 </li>
             </ul>
         </div>
