remove class from list

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
         <nav class="cabecalho">
             <button type="button" class="icone-menu fechar-menu" aria-expanded="false" aria-label="Close">×</button>
             <ul>
-                <li><a href="#voluntario" class="links">Voluntário</a></li>
-                <li><a href="#espaco" class="links">Nosso Espaço</a></li>
+                <li><a href="#voluntario">Voluntário</a></li>
+                <li><a href="#espaco">Nosso Espaço</a></li>
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
-                <li><a href="#equipe" class="links">Equipe</a></li>
-                <li><a href="#vis-cont1" class="links">Agendar</a></li>
+                <li><a href="#equipe">Equipe</a></li>
+                <li><a href="#vis-cont1">Agendar</a></li>
                 <li>
-                    <a href="#contatos" class="icon-link">Contatos<img src="images/contatos 1.png">
-                    </a>
+                    <a href="#contatos" class="icon-link">Contatos<img src="images/contatos 1.png"></a>
                 </li>
             </ul>
         </div>
