fix img not showing up

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
     <div id="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
-        <a target="_blank" href="#"><img class="voluntario-btn" src="../images/voluntariado.png" alt="Voluntário"></a>
+        <a target="_blank" href="#"><img class="voluntario-btn" src="images/voluntariado.png" alt="Voluntário"></a>
     </div>
     <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
