--- a/projetos.html
+++ b/projetos.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body class="projeto">
     <a href="index.html" class="volta">Voltar</a>
     <p class="texto1">Nossos Projetos</p>
     <p>Aqui na fundação, disponibilizamos vários projetos diversos, procure por um que você ache interessante:</p>
+    <script src="./JS/scripts.js"></script>
     <div class="projetos">
         <div class="product-image" id="img-1"></div>
           <h3>Horta Comunitária</h3>
