Removal of contatos quick link

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
                 <li><a href="#espaco">Nosso Espaço</a></li>
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
                 <li><a href="#equipe">Equipe</a></li>
-                <li><a href="#vis-cont1">Agendar</a></li>
-                <li>
-                    <a href="#contatos" class="icon-link">Contatos<img src="images/contatos 1.png"></a>
-                </li>
+                <li><a href="#vis-cont1">Agendar<img src="images/contatos 1.png"></a></li>
             </ul>
         </div>
     </header>
@@ -143,16 +140,6 @@
         missaoambiental.org@gmail.com<br> 
         <br> 
         |(11) 96677-6565</p> 
-    </div>   
-    <div id="vis-cont2"> 
-        <p class="link-tit">Quick Links</p> 
-        <p class="link"><a href="index.html" class="link">Home</a><br> 
-        <br> 
-        <a href="espaco.html" class="link">Our Space</a><br> 
-        <br> 
-        <a href="projetos.html" class="link">Projetos</a><br> 
-        <br> 
-        <a href="contatos.html" class="link">Contatos</a></p>
     </div>
     <div class="termos">
         <p class="uso">Termos de Uso</p>
