change class to id & fix li

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <li><a href="#espaco">Nosso Espaço</a></li>
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
                 <li><a href="#equipe">Equipe</a></li>
-                <li><a href="#vis-cont1">Agendar<img src="images/contatos 1.png"></a></li>
+                <li><a href="#agendar">Agendar</a></li>
+                <li><a href="#vis-cont1">Contatos<img src="images/contatos 1.png"></a></li>
             </ul>
         </div>
     </header>
@@ -125,7 +126,7 @@
         <p class="nome">Nome</p>
         <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
-    <div class="agendar">
+    <div id="agendar">
         <p class="titulo">Agende uma Visita</p> 
     <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
     <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a>
