Freepik link fix

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <div class="creditos">
         <p class="termos">Créditos</p>
-        <p class="freepick">- <a href=""https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
+        <p class="freepick">- <a href="https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
     </div>
     <br> <br> <br>
     <p id="copy">Copyright © 2017 Missão Ambiental, todos os direitos reservados.</p>
